crates/pgls_pretty_print/tests/snapshots/multi/tests__20220117142138_developer_tools_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20220117142138_developer_tools.sql
---
create or replace function app.simulate_login(email citext)
returns void
language sql
as $function$
/*
    Simulated JWT of logged in user
    */

    select
        set_config(
            'request.jwt.claims',
            (
                select
                    json_build_object(
                        'sub',
                        id,
                        'role',
                        'authenticated'
                    )::text
                from
                    auth.users
                where
                    email = $1
            ),
            true
        ),
        set_config('role', 'authenticated', true)
$function$;
