crates/pgls_pretty_print/tests/snapshots/multi/tests__20220117142142_security_definitions_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20220117142142_security_definitions.sql
---
grant INSERT (handle, is_organization) on table app.handle_registry to authenticated;

alter table app.accounts
  enable row level security;

grant UPDATE (avatar_id, display_name, bio, contact_email) on table app.accounts to authenticated;

create policy accounts_update_policy
on app.accounts
as permissive
for update
to authenticated
using (id = auth.uid());

create policy accounts_select_policy
on app.accounts
as permissive
for select
to authenticated
using (true);

alter table app.organizations
  enable row level security;

grant INSERT (handle,
avatar_id,
display_name,
bio,
contact_email)
on table app.organizations
to authenticated;

grant UPDATE (avatar_id,
display_name,
bio,
contact_email)
on table app.organizations
to authenticated;

create policy organizations_insert_policy
on app.organizations
as permissive
for insert
to authenticated
with check (true);

create policy organizations_update_policy
on app.organizations
as permissive
for update
to authenticated
using (app.is_organization_maintainer(auth.uid(), id));

create policy organizations_select_policy
on app.organizations
as permissive
for select
to authenticated
using (true);

alter table app.members
  enable row level security;

grant INSERT (organization_id, account_id, role) on table app.members to authenticated;

grant DELETE on table app.members to authenticated;

create policy members_insert_policy
on app.members
as permissive
for insert
to authenticated
with check (app.is_organization_maintainer(
  auth.uid(),
  organization_id
));

create policy members_delete_policy
on app.members
as permissive
for delete
to authenticated
using (app.is_organization_maintainer(
  auth.uid(),
  organization_id
));

create policy members_select_policy
on app.members
as permissive
for select
to authenticated
using (true);

alter table app.packages
  enable row level security;

grant INSERT (partial_name, handle) on table app.packages to authenticated;

create policy package_insert_policy
on app.packages
as permissive
for insert
to authenticated
with check (app.is_handle_maintainer(auth.uid(), handle));

create policy packages_select_policy
on app.packages
as permissive
for select
to authenticated
using (true);

alter table app.package_versions
  enable row level security;

grant INSERT (package_id,
version_struct,
sql,
description_md)
on table app.package_versions
to authenticated;

create policy package_versions_insert_policy
on app.package_versions
as permissive
for insert
to authenticated
with check (app.is_package_maintainer(auth.uid(), package_id));

create policy package_versions_update_policy
on app.package_versions
as permissive
for update
to authenticated
using (app.is_package_maintainer(auth.uid(), package_id));

create policy package_versions_select_policy
on app.package_versions
as permissive
for select
to public
using (true);

alter table app.package_upgrades
  enable row level security;

grant INSERT (package_id,
from_version_struct,
to_version_struct,
sql)
on table app.package_upgrades
to authenticated;

create policy package_upgrades_insert_policy
on app.package_upgrades
as permissive
for insert
to authenticated
with check (app.is_package_maintainer(auth.uid(), package_id));

create policy package_upgrades_update_policy
on app.package_upgrades
as permissive
for update
to authenticated
using (app.is_package_maintainer(auth.uid(), package_id));

create policy package_upgrades_select_policy
on app.package_upgrades
as permissive
for select
to public
using (true);

create policy storage_objects_insert_policy
on storage.objects
as permissive
for insert
to authenticated
with check (app.is_handle_maintainer(
  auth.uid(),
  cast((string_to_array(name, cast('-' as text)))[1]
  as app.valid_name)
));

create policy storage_objects_select_policy
on storage.objects
as permissive
for select
to public
using (bucket_id = 'avatars');
