crates/pgls_pretty_print/tests/snapshots/multi/tests__20220117155820_rpc_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/20220117155820_rpc.sql
---
create or replace function
public.search_packages(
  handle citext default null,
  partial_name citext default null
)
returns setof public.packages
language sql
stable
as $function$
select *
    from public.packages
    where
        ($1 is null or handle <% $1 or handle ~ $1)
        and
        ($2 is null or partial_name <% $2 or partial_name ~ $2)
    order by
        coalesce(extensions.similarity($1, handle), 0) + coalesce(extensions.similarity($2, partial_name), 0) desc,
        created_at desc;
$function$;
